<resources>
    <string name="app_name">PUBG Mobile Weapon Data</string>
    <string name="weapon_type">Type</string>
    <string name="weapon_list">Weapon List</string>
    <string name="about">About</string>
    <string name="assault_rifle_ar">Assault Rifle (AR)</string>
    <string name="sniper_rifle">Sniper Rifle</string>
    <string name="light_machine_gun_lmg">Light Machine Gun (LMG)</string>
    <string name="submachine_gun_smg">Submachine Gun (SMG)</string>
    <string name="shotgun">Shotgun</string>
    <string name="pistol">Pistol</string>
    <string name="show_all">Show All</string>
    <string name="namaku">Wawan Eka Setiyawan</string>
    <string name="emailku">wawan7706@students.amikom.ac.id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="ammo">Ammo</string>
    <string name="type">Type</string>
    <string name="firing_rate">Firing Rate</string>
    <string name="stability">Stability</string>
    <string name="range">Range</string>
    <string name="power">Power</string>
</resources>
